Fix businessCard issues on Safari and FireFox

--- a/stylesheets/base/_configurations.scss
+++ b/stylesheets/base/_configurations.scss
@@ -64,7 +64,7 @@ $base-c-card: (
   ),
   back-face: (
     color: white(),
-    background-color: palette(black, superlight)
+    background-color: palette(purple-heart, dark)
   )
 
 ) !default;
